# fastema

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  ema_bench.cpp  vanilla_ema.hpp
cmake/: dev-mode.cmake  fetch-nanobench.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/fastema/: fastema.hpp
scripts/: build-clean.sh  install_compiler.sh
test/: CMakeLists.txt
test/src/: fastema_test.cpp
